--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>EverFrost - Connexion</title>
+  <title>EverFrost - Se connecter</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,183 +12,114 @@
       height: 100vh;
       margin: 0;
     }
-    .container {
-      text-align: center;
-      width: 320px;
-      background: #3a3f4b;
-      padding: 2.5rem 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(33, 161, 241, 0.7);
-      position: relative;
-    }
     h1 {
       font-size: 2.5rem;
-      margin-bottom: 2rem;
-      color: #61dafb;
-    }
-    label {
-      display: block;
-      text-align: left;
-      margin-bottom: 0.5rem;
-      font-weight: 600;
-      color: #aad4ff;
-    }
-    input[type="email"], input[type="password"] {
-      width: 100%;
-      padding: 0.7rem 1rem;
       margin-bottom: 1.5rem;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      background: #20252e;
-      color: white;
-      outline: none;
-      box-sizing: border-box;
-      transition: background 0.3s ease;
     }
-    input[type="email"]:focus, input[type="password"]:focus {
-      background: #2a2f3b;
-      box-shadow: 0 0 8px #61dafb;
+    form {
+      display: flex;
+      flex-direction: column;
+      background: #3a3f4b;
+      padding: 2rem;
+      border-radius: 12px;
+      width: 320px;
+      box-shadow: 0 0 15px #61dafb;
+      position: relative;
+    }
+    input {
+      background: #22272e;
+      border: none;
+      padding: 0.8rem;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+      color: white;
+      font-size: 1rem;
+    }
+    input::placeholder {
+      color: #888;
     }
     button {
-      width: 100%;
-      padding: 1rem;
       background: #61dafb;
+      color: black;
       border: none;
-      border-radius: 12px;
-      font-size: 1.2rem;
+      padding: 1rem;
+      border-radius: 10px;
       font-weight: bold;
-      color: #282c34;
+      font-size: 1.2rem;
       cursor: pointer;
       transition: background 0.3s ease;
-      letter-spacing: 0.05em;
     }
     button:hover {
       background: #21a1f1;
       color: white;
     }
-    .help-circle {
-      position: absolute;
-      top: 15px;
-      right: 15px;
-      background: #61dafb;
-      color: #282c34;
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      font-weight: 700;
-      font-size: 22px;
-      line-height: 32px;
-      cursor: pointer;
-      user-select: none;
-      box-shadow: 0 0 8px #61dafb;
-    }
-    .help-message {
-      display: none;
-      background: #20252e;
-      color: #aad4ff;
-      padding: 1rem;
-      border-radius: 8px;
+    .info {
+      margin-top: 1rem;
       font-size: 0.9rem;
-      margin-top: 0.5rem;
+      color: #ccc;
       text-align: center;
     }
-    .help-circle.active + .help-message {
-      display: block;
-    }
-    .bottom-text {
-      margin-top: 1.5rem;
-      font-size: 0.95rem;
-      color: #aad4ff;
-    }
-    .bottom-text a {
+    a {
       color: #61dafb;
       text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease;
+      font-weight: bold;
     }
-    .bottom-text a:hover {
-      color: #21a1f1;
+    a:hover {
       text-decoration: underline;
     }
-    .error-message {
-      color: #ff4c4c;
+    .error {
+      color: #ff6b6b;
       margin-bottom: 1rem;
-      font-weight: 600;
+      text-align: center;
+    }
+    .help-circle {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 26px;
+      height: 26px;
+      border-radius: 50%;
+      background: #61dafb;
+      color: black;
+      font-weight: bold;
+      font-size: 18px;
+      cursor: pointer;
+      user-select: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   </style>
-</head>
-<body>
-  <div class="container">
-    <div class="help-circle" id="helpBtn">?</div>
-    <div class="help-message" id="helpMsg">Si vous avez perdu votre mot de passe, demandez à Kenzo.</div>
-    
-    <h1>Connexion</h1>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js";
 
-    <div class="error-message" id="errorMsg"></div>
-
-    <form id="loginForm">
-      <label for="email">Adresse e-mail</label>
-      <input type="email" id="email" required placeholder="exemple@exemple.com" />
-
-      <label for="password">Mot de passe</label>
-      <input type="password" id="password" required placeholder="••••••••" />
-
-      <button type="submit">Se connecter</button>
-    </form>
-
-    <div class="bottom-text">
-      Pas encore inscrit ? <a href="register.html">Créer un compte</a>
-    </div>
-  </div>
-
-  <!-- Firebase CDN & Config à ajouter ici -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script>
-    // Ta config Firebase ici (remplace par la tienne)
     const firebaseConfig = {
-      apiKey: "TA_API_KEY",
-      authDomain: "TON_DOMAINE.firebaseapp.com",
-      projectId: "TON_PROJECT_ID",
-      storageBucket: "TON_BUCKET.appspot.com",
-      messagingSenderId: "TON_SENDER_ID",
-      appId: "TON_APP_ID"
+      apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+      authDomain: "message-957c6.firebaseapp.com",
+      databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "message-957c6",
+      storageBucket: "message-957c6.appspot.com",
+      messagingSenderId: "518720941529",
+      appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+      measurementId: "G-GW0GKGQ9EP"
     };
 
-    // Initialiser Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-    // Gestion bouton d'aide
-    const helpBtn = document.getElementById('helpBtn');
-    helpBtn.addEventListener('click', () => {
-      helpBtn.classList.toggle('active');
-    });
+    window.addEventListener('DOMContentLoaded', () => {
+      const form = document.getElementById('loginForm');
+      const errorDiv = document.getElementById('error');
+      const helpBtn = document.getElementById('helpBtn');
 
-    const loginForm = document.getElementById('loginForm');
-    const errorMsg = document.getElementById('errorMsg');
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        errorDiv.textContent = '';
+        const email = form.email.value.trim();
+        const password = form.password.value;
 
-    loginForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      errorMsg.textContent = ""; // reset erreur
-      
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          // Connexion réussie
-          alert("Connexion réussie ! Redirection en cours...");
-          // Rediriger par exemple vers home.html
-          window.location.href = "home.html";
-        })
-        .catch((error) => {
-          // Afficher l'erreur proprement
-          errorMsg.textContent = error.message;
-        });
-    });
-  </script>
-</body>
-</html>
-
+        try {
+          await signInWithEmailAndPassword(auth, email, password);
+          // redirige vers home.html après connexion
+          window
