--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>TitiCraft - Bienvenue</title>
+  <title>EverFrost - Bienvenue</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bienvenue sur TitiCraft</h1>
+    <h1>Bienvenue sur EverFrost</h1>
     <a href="register.html">S'inscrire</a>
     <a href="login.html">Se connecter</a>
   </div>
