--- a/home.html
+++ b/home.html
@@ -57,6 +57,8 @@
       margin-bottom: 0.8rem;
       padding: 0.3rem 0.6rem;
       border-radius: 5px;
+      max-width: 70%;
+      word-wrap: break-word;
     }
     .message .pseudo {
       font-weight: bold;
@@ -119,7 +121,7 @@
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
     import { getDatabase, ref, push, onChildAdded, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
 
-    // Config Firebase (même que les autres pages)
+    // Config Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
       authDomain: "message-957c6.firebaseapp.com",
@@ -143,7 +145,7 @@
 
     let currentUser = null;
 
-    // Vérifier si l'utilisateur est connecté sinon rediriger vers login
+    // Vérifier connexion
     onAuthStateChanged(auth, user => {
       if (!user) {
         window.location.href = "login.html";
@@ -154,7 +156,7 @@
       listenMessages();
     });
 
-    // Fonction pour afficher les messages en temps réel
+    // Écouter messages
     function listenMessages() {
       const messagesRef = ref(db, "messages");
 
@@ -163,13 +165,13 @@
         const div = document.createElement("div");
         div.classList.add("message");
         div.classList.add(msg.uid === currentUser.uid ? "own" : "other");
-        div.innerHTML = `<span class="pseudo">${msg.pseudo}:</span> ${escapeHtml(msg.text)}`;
+        div.innerHTML = `<span class="pseudo">${escapeHtml(msg.pseudo)}:</span> ${escapeHtml(msg.text)}`;
         chatBox.appendChild(div);
         chatBox.scrollTop = chatBox.scrollHeight;
       });
     }
 
-    // Échapper HTML simple (sécurité)
+    // Sécurité HTML
     function escapeHtml(text) {
       const map = {
         '&': '&amp;',
