--- a/register.html
+++ b/register.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <h1>Créer un compte EverFrost
-    <span class="help-circle" onclick="alert('Si vous avez perdu votre mot de passe, demandez à Kenzo !')">?</span>
+    <span class="help-circle" onclick="alert('Si vous avez une question, veuiller contacter Kenzo !')">?</span>
   </h1>
   <form id="registerForm" onsubmit="return false;">
     <input id="pseudo" type="text" placeholder="Pseudo" required minlength="3" />
