--- a/settings.html
+++ b/settings.html
@@ -13,22 +13,11 @@
 
     <h1>Paramètres</h1>
 
+    <!-- Changement de pseudo -->
     <input type="text" id="newUsername" placeholder="Nouveau pseudo">
     <button id="saveUsername">Changer le pseudo</button>
-
-    <input type="email" id="newEmail" placeholder="Nouvel email">
-    <button id="saveEmail">Changer l'email</button>
-
-    <input type="password" id="newPassword" placeholder="Nouveau mot de passe">
-    <button id="savePassword">Changer le mot de passe</button>
-
-    <div style="margin-top:20px;">
-      💎 <input type="number" id="diamondInput" min="0" style="width:80px; text-align:center;"> diamants
-      <button id="saveDiamonds">Mettre à jour</button>
-    </div>
   </div>
 
   <script type="module" src="settings.js"></script>
 </body>
 </html>
-
