--- a/settings.html
+++ b/settings.html
@@ -5,15 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paramètres</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background: linear-gradient(135deg, #1e1e2f, #2a2a40);
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .settings-container {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 15px;
+      text-align: center;
+      width: 350px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    }
+    h1 {
+      margin-bottom: 20px;
+      font-size: 26px;
+      color: #4cafef;
+    }
+    input {
+      padding: 10px;
+      width: 90%;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 8px;
+      outline: none;
+      font-size: 16px;
+    }
+    button {
+      background: #4cafef;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #3a94d6;
+    }
+    #backBtn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      font-size: 28px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Bouton retour -->
-    <div id="backBtn" title="Retour" style="position:absolute; top:15px; left:15px; font-size:24px; cursor:pointer;">⬅️</div>
+  <div id="backBtn" title="Retour">⬅️</div>
 
+  <div class="settings-container">
     <h1>Paramètres</h1>
-
-    <!-- Changement de pseudo -->
     <input type="text" id="newUsername" placeholder="Nouveau pseudo">
     <button id="saveUsername">Changer le pseudo</button>
   </div>
